--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
   "devDependencies": {
     "typescript": "^4.3.2",
     "vite": "^2.5.4"
+  },
+  "dependencies": {
+    "reveal.js": "^4.1.3"
   }
 }
