--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
   "devDependencies": {
     "gh-pages": "^3.2.3",
     "typescript": "^4.3.2",
-    "vite": "^2.5.4"
+    "vite": "^2.5.4",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@vitejs/plugin-react-refresh": "^1.3.1"
   },
   "dependencies": {
-    "reveal.js": "^4.1.3"
+    "reveal.js": "^4.1.3",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0"
   }
 }
