--- a/package.json
+++ b/package.json
@@ -9,16 +9,18 @@
     "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
-    "gh-pages": "^3.2.3",
-    "typescript": "^4.3.2",
-    "vite": "^2.5.4",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "@vitejs/plugin-react-refresh": "^1.3.1"
+    "@types/styled-components": "^5.1.14",
+    "@vitejs/plugin-react-refresh": "^1.3.1",
+    "gh-pages": "^3.2.3",
+    "typescript": "^4.3.2",
+    "vite": "^2.5.4"
   },
   "dependencies": {
-    "reveal.js": "^4.1.3",
     "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react-dom": "^17.0.0",
+    "reveal.js": "^4.1.3",
+    "styled-components": "^5.3.1"
   }
 }
